--- a/styles/album.css
+++ b/styles/album.css
@@ -62,7 +62,7 @@
      width: 5%;
  }
 
- .album-song-button {
+  .album-song-button {
      text-align: center;
      font-size: 14px;
      background-color: white;
@@ -81,7 +81,7 @@
  
  .album-song-button span {
      line-height: 28px;
-
+ }
 
  /* #2 */
  @media (max-width: 640px) and (min-width: 320px) {
