--- a/styles/player_bar.css
+++ b/styles/player_bar.css
@@ -7,6 +7,7 @@
      background-color: rgba(255, 255, 255, 0.3);
      z-index: 100;
  }
+ 
  .player-bar a {
      font-size: 1.1rem;
      vertical-align: middle;
@@ -51,7 +52,7 @@
      text-align: center;
      position: relative;
  }
-  
+
  .player-bar .currently-playing .song-name,
  .player-bar .currently-playing .artist-name,
  .player-bar .currently-playing .artist-song-mobile {
@@ -75,7 +76,7 @@
  .player-bar .currently-playing .artist-song-mobile {
      display: none;
  }
- 
+  
  .seek-control {
      position: relative;
      font-size: 0.8rem;
@@ -121,7 +122,10 @@
      cursor: pointer;
      -webkit-transition: all 100ms ease-in-out;
         -moz-transition: all 100ms ease-in-out;
-             transition: all 100ms ease-in-out;
+     transition: width 100ms ease-in-out,
+                 height 100ms ease-in-out,
+                 margin-top 100ms ease-in-out,
+                 margin-left 100ms ease-in-out;
  }
  
  .seek-bar:hover .thumb {
@@ -135,7 +139,7 @@
      width: 25%;
      text-align: right;
  }
- 
+  
  .player-bar .volume .icon {
      font-size: 1.1rem;
      display: inline-block;
@@ -147,7 +151,7 @@
      width: 5.75rem;
      vertical-align: middle;
  }
- 
+
  @media (max-width: 640px) {
      .player-bar {
          padding: 1rem;
